resolve issue with live player on mobile not animating when live links are open and are being closed

--- a/themes/greatermedia/assets/css/greater_media.css
+++ b/themes/greatermedia/assets/css/greater_media.css
@@ -5474,12 +5474,13 @@ category: Components
       display: none; } }
 
 .live-links {
-  display: none;
+  visibility: hidden;
   padding: 16px 0 0;
   background-color: #000000;
   text-align: center; }
   @media screen and (min-width: 768px) {
     .live-links {
+      visibility: visible;
       display: block;
       height: 100%;
       padding-right: 1em;
@@ -5490,6 +5491,7 @@ category: Components
       border-top: 1px solid #282827; } }
 
 .live-player--open .live-links {
+  visibility: visible;
   display: block;
   height: auto !important;
   max-height: 48vh;
