--- a/themes/greatermedia/assets/css/sass/components/_liveplayer.scss
+++ b/themes/greatermedia/assets/css/sass/components/_liveplayer.scss
@@ -1106,11 +1106,12 @@ category: Components
 
 // live links
 .live-links {
-	display: none;
+	visibility: hidden;
 	padding: 16px 0 0;
 	background-color: $liveplayer-bg;
 	text-align: center;
 	@include bp(medium) {
+		visibility: visible;
 		display: block;
 		height: 100%;
 		padding-right: 1em;
@@ -1123,6 +1124,7 @@ category: Components
 }
 
 .live-player--open .live-links {
+	visibility: visible;
 	display: block;
 	height: auto !important;
 	max-height: 48vh;
