--- a/themes/wmgk/assets/css/wmgk.css
+++ b/themes/wmgk/assets/css/wmgk.css
@@ -5484,12 +5484,13 @@ category: Components
       display: none; } }
 
 .live-links {
-  display: none;
+  visibility: hidden;
   padding: 16px 0 0;
   background-color: #f2f2f2;
   text-align: center; }
   @media screen and (min-width: 768px) {
     .live-links {
+      visibility: visible;
       display: block;
       height: 100%;
       padding-right: 1em;
@@ -5500,6 +5501,7 @@ category: Components
       border-top: 1px solid #282827; } }
 
 .live-player--open .live-links {
+  visibility: visible;
   display: block;
   height: auto !important;
   max-height: 48vh;
